# AI-Algo-Reference

./: .gitignore  01_linear_regression.py  02_logistic_regression.py  03_decision_tree.py  04_xgboost.py  05_support_vector_machine.py  06_random_forest.py  07_adaboost.py  08_gradient_boosting.py  09_naive_bayes.py  10_hierarchical_clustering.py  11_k_means_clustering.py  12_k_nearest_neighbors.py  13_principal_component_analysis.py  14_dbscan.py  15_t_sne.py  16_q_learning.py  17_sarsa.py  18_deep_q_network.py  19_policy_gradient.py  20_actor_critic.py  21_artificial_neural_network.py  22_convolutional_neural_network.py  23_recurrent_neural_network.py  24_long_short_term_memory.py  25_transformer.py  26_k_means_plus_plus.py  27_autoencoders.py  28_isolation_forest.py  29_markov_decision_process.py  30_genetic_algorithms.py  README.md  main.py  pyproject.toml  requirements.txt
